Initial Unused Asset Removal
Removed world, UI, etc. from state, main
Removed screenshot
Removed all images, textures, etc.
Removed unused src files (blocks, entities, UI, etc.)
Black screen achieved

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 bin/game
 
-*.icloud
 .DS_Store
 .vscode
 
@@ -56,3 +55,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Potentially reusable assets
+reuse/
